{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 194,
  "lineage": "8161d2cf-fe82-370f-81a7-3751e4771ac3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a8384a8d24ab6dcf",
            "domain": "vpc",
            "id": "eipalloc-0339614c6dd0d4506",
            "instance": "i-0e75ac4ca44979a83",
            "network_interface": "eni-01cbd6b48f9f3e3af",
            "private_dns": "ip-10-1-0-63.us-west-2.compute.internal",
            "private_ip": "10.1.0.63",
            "public_dns": "ec2-44-231-199-71.us-west-2.compute.amazonaws.com",
            "public_ip": "44.231.199.71",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0f2725db3675733c6",
            "domain": "vpc",
            "id": "eipalloc-04d19cdcf4b914735",
            "network_interface": "eni-0706b6b767466fa09",
            "private_dns": "ip-10-1-0-23.us-west-2.compute.internal",
            "private_ip": "10.1.0.23",
            "public_dns": "ec2-52-35-154-7.us-west-2.compute.amazonaws.com",
            "public_ip": "52.35.154.7",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0865b14ad73062365",
            "arn": "arn:aws:ec2:us-west-2:633834615594:instance/i-0c099743186a52310",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c099743186a52310",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "app_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-074128d8f1556ad69",
            "private_dns": "ip-10-1-10-116.us-west-2.compute.internal",
            "private_ip": "10.1.10.116",
            "public_dns": "ec2-54-202-4-112.us-west-2.compute.amazonaws.com",
            "public_ip": "54.202.4.112",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b76212df592870b7",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c2eb1f77395190e6",
            "tags": {
              "Name": "app-01"
            },
            "tenancy": "default",
            "volume_tags": {
              "Owner": "hoa.nh",
              "PrincipalId": "AIDAIRF62RTJXCL5MBT3C"
            },
            "vpc_security_group_ids": [
              "sg-00e4213d4f3f5e39e",
              "sg-054b91882e0fa7cfa"
            ]
          },
          "dependencies": [
            "aws_key_pair.app",
            "aws_security_group.admin",
            "aws_security_group.app",
            "aws_subnet.private",
            "aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0865b14ad73062365",
            "arn": "arn:aws:ec2:us-west-2:633834615594:instance/i-01c3c771d28ebfdbf",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c3c771d28ebfdbf",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "app_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-004ec17b8cf4b1852",
            "private_dns": "ip-10-1-11-224.us-west-2.compute.internal",
            "private_ip": "10.1.11.224",
            "public_dns": "ec2-54-202-23-203.us-west-2.compute.amazonaws.com",
            "public_ip": "54.202.23.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06e4b9b2e7bffc821",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e546da7d947b2b98",
            "tags": {
              "Name": "app-02"
            },
            "tenancy": "default",
            "volume_tags": {
              "Owner": "hoa.nh",
              "PrincipalId": "AIDAIRF62RTJXCL5MBT3C"
            },
            "vpc_security_group_ids": [
              "sg-00e4213d4f3f5e39e",
              "sg-054b91882e0fa7cfa"
            ]
          },
          "dependencies": [
            "aws_key_pair.app",
            "aws_security_group.admin",
            "aws_security_group.app",
            "aws_subnet.private",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cc158853935719b7",
            "arn": "arn:aws:ec2:us-west-2:633834615594:instance/i-0e75ac4ca44979a83",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e75ac4ca44979a83",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "bastion_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01cbd6b48f9f3e3af",
            "private_dns": "ip-10-1-0-63.us-west-2.compute.internal",
            "private_ip": "10.1.0.63",
            "public_dns": "ec2-44-231-199-71.us-west-2.compute.amazonaws.com",
            "public_ip": "44.231.199.71",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08a143a71e2854d9e",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-051990ea06cb55042",
            "tags": {
              "Name": "bastion-01"
            },
            "tenancy": "default",
            "volume_tags": {
              "Owner": "hoa.nh",
              "PrincipalId": "AIDAIRF62RTJXCL5MBT3C"
            },
            "vpc_security_group_ids": [
              "sg-087b3071c4177bcef"
            ]
          },
          "dependencies": [
            "aws_key_pair.bastion",
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-064e3a8a9cb579782",
            "arn": "arn:aws:ec2:us-west-2:633834615594:instance/i-0be0fad7f03902a8e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be0fad7f03902a8e",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "web_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c9dc0e15f6e2e74f",
            "private_dns": "ip-10-1-10-158.us-west-2.compute.internal",
            "private_ip": "10.1.10.158",
            "public_dns": "ec2-18-237-95-168.us-west-2.compute.amazonaws.com",
            "public_ip": "18.237.95.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b22b46a1683531e0",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c2eb1f77395190e6",
            "tags": {
              "Name": "web-01"
            },
            "tenancy": "default",
            "volume_tags": {
              "Owner": "hoa.nh",
              "PrincipalId": "AIDAIRF62RTJXCL5MBT3C"
            },
            "vpc_security_group_ids": [
              "sg-051e741edc74d411d",
              "sg-054b91882e0fa7cfa"
            ]
          },
          "dependencies": [
            "aws_key_pair.web",
            "aws_security_group.admin",
            "aws_security_group.web",
            "aws_subnet.private",
            "aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-064e3a8a9cb579782",
            "arn": "arn:aws:ec2:us-west-2:633834615594:instance/i-0c78d748fc3295a84",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c78d748fc3295a84",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "web_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f2aebd248f494eb4",
            "private_dns": "ip-10-1-11-31.us-west-2.compute.internal",
            "private_ip": "10.1.11.31",
            "public_dns": "ec2-34-219-188-224.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.188.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bc48b91af731b98f",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e546da7d947b2b98",
            "tags": {
              "Name": "web-02"
            },
            "tenancy": "default",
            "volume_tags": {
              "Owner": "hoa.nh",
              "PrincipalId": "AIDAIRF62RTJXCL5MBT3C"
            },
            "vpc_security_group_ids": [
              "sg-051e741edc74d411d",
              "sg-054b91882e0fa7cfa"
            ]
          },
          "dependencies": [
            "aws_key_pair.web",
            "aws_security_group.admin",
            "aws_security_group.web",
            "aws_subnet.private",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:633834615594:internet-gateway/igw-0933e1e3b914076b9",
            "id": "igw-0933e1e3b914076b9",
            "owner_id": "633834615594",
            "tags": {
              "CommonTags": "packer-demo-demo-20201231-080719",
              "Name": "igw-demo-vpc"
            },
            "vpc_id": "vpc-0091078598950ff3c"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web-lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:633834615594:loadbalancer/app/web-lb/32212442d89f7e9d",
            "arn_suffix": "app/web-lb/32212442d89f7e9d",
            "dns_name": "web-lb-1052231808.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:633834615594:loadbalancer/app/web-lb/32212442d89f7e9d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-lb",
            "security_groups": [
              "sg-09e342a4f474d5679"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-051990ea06cb55042"
              },
              {
                "subnet_id": "subnet-0aaa155cf5d8c3561"
              },
              {
                "subnet_id": "subnet-0e9afe3a9c44f9eb8"
              }
            ],
            "subnets": [
              "subnet-051990ea06cb55042",
              "subnet-0aaa155cf5d8c3561",
              "subnet-0e9afe3a9c44f9eb8"
            ],
            "tags": {
              "Name": "web-lb"
            },
            "vpc_id": "vpc-0091078598950ff3c",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.lb-external",
            "aws_subnet.public",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:633834615594:listener/app/web-lb/32212442d89f7e9d/303d3004e156899b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:633834615594:targetgroup/web-tg/2c45083c558d9099",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:633834615594:listener/app/web-lb/32212442d89f7e9d/303d3004e156899b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:633834615594:loadbalancer/app/web-lb/32212442d89f7e9d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.web-lb",
            "aws_lb_target_group.web",
            "aws_security_group.lb-external",
            "aws_subnet.public",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:633834615594:targetgroup/web-tg/2c45083c558d9099",
            "arn_suffix": "targetgroup/web-tg/2c45083c558d9099",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:633834615594:targetgroup/web-tg/2c45083c558d9099",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "web-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0091078598950ff3c"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:633834615594:targetgroup/web-tg/2c45083c558d9099-20201231074341902900000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:633834615594:targetgroup/web-tg/2c45083c558d9099",
            "target_id": "i-0be0fad7f03902a8e"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_key_pair.web",
            "aws_lb_target_group.web",
            "aws_security_group.admin",
            "aws_security_group.web",
            "aws_subnet.private",
            "aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:633834615594:targetgroup/web-tg/2c45083c558d9099-20201231074341952700000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:633834615594:targetgroup/web-tg/2c45083c558d9099",
            "target_id": "i-0c78d748fc3295a84"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_key_pair.web",
            "aws_lb_target_group.web",
            "aws_security_group.admin",
            "aws_security_group.web",
            "aws_subnet.private",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "demo-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d19cdcf4b914735",
            "id": "nat-0a952e5525a04dc1a",
            "network_interface_id": "eni-0706b6b767466fa09",
            "private_ip": "10.1.0.23",
            "public_ip": "52.35.154.7",
            "subnet_id": "subnet-051990ea06cb55042"
          },
          "dependencies": [
            "aws_eip.nat-gw",
            "aws_subnet.public",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0433e25bb8b72e303",
            "owner_id": "633834615594",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0a952e5525a04dc1a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CommonTags": "packer-demo-demo-20201231-080719",
              "Name": "private-rt"
            },
            "vpc_id": "vpc-0091078598950ff3c"
          },
          "dependencies": [
            "aws_nat_gateway.demo-vpc",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07de2eebbd994d128",
            "owner_id": "633834615594",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0933e1e3b914076b9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CommonTags": "packer-demo-demo-20201231-080719",
              "Name": "public-rt"
            },
            "vpc_id": "vpc-0091078598950ff3c"
          },
          "dependencies": [
            "aws_internet_gateway.demo-vpc",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7a290df47cd1c5e",
            "route_table_id": "rtb-0433e25bb8b72e303",
            "subnet_id": "subnet-0c2eb1f77395190e6"
          },
          "dependencies": [
            "aws_eip.nat-gw",
            "aws_nat_gateway.demo-vpc",
            "aws_route_table.private-rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058f94e810776cf38",
            "route_table_id": "rtb-0433e25bb8b72e303",
            "subnet_id": "subnet-0e546da7d947b2b98"
          },
          "dependencies": [
            "aws_eip.nat-gw",
            "aws_nat_gateway.demo-vpc",
            "aws_route_table.private-rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0879bcfe52af867e3",
            "route_table_id": "rtb-0433e25bb8b72e303",
            "subnet_id": "subnet-09fee2aea64580594"
          },
          "dependencies": [
            "aws_eip.nat-gw",
            "aws_nat_gateway.demo-vpc",
            "aws_route_table.private-rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bf3c67bcee128a5",
            "route_table_id": "rtb-07de2eebbd994d128",
            "subnet_id": "subnet-051990ea06cb55042"
          },
          "dependencies": [
            "aws_internet_gateway.demo-vpc",
            "aws_route_table.public-rt",
            "aws_subnet.public",
            "aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df7a4487889c010b",
            "route_table_id": "rtb-07de2eebbd994d128",
            "subnet_id": "subnet-0aaa155cf5d8c3561"
          },
          "dependencies": [
            "aws_internet_gateway.demo-vpc",
            "aws_route_table.public-rt",
            "aws_subnet.public",
            "aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0161c7424ccbc2b54",
            "route_table_id": "rtb-07de2eebbd994d128",
            "subnet_id": "subnet-0e9afe3a9c44f9eb8"
          },
          "dependencies": [
            "aws_internet_gateway.demo-vpc",
            "aws_route_table.public-rt",
            "aws_subnet.public",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "admin",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:633834615594:security-group/sg-054b91882e0fa7cfa",
            "description": "Management security groups",
            "egress": [],
            "id": "sg-054b91882e0fa7cfa",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "For ssh access from bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-087b3071c4177bcef"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_adm",
            "name_prefix": null,
            "owner_id": "633834615594",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0091078598950ff3c"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:633834615594:security-group/sg-00e4213d4f3f5e39e",
            "description": "APP security groups",
            "egress": [],
            "id": "sg-00e4213d4f3f5e39e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow access from Web",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-051e741edc74d411d"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "sg_app",
            "name_prefix": null,
            "owner_id": "633834615594",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0091078598950ff3c"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:633834615594:security-group/sg-087b3071c4177bcef",
            "description": "Bastion security group",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "For admin management",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-054b91882e0fa7cfa"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-087b3071c4177bcef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "For allow ssh from outside",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_bastion",
            "name_prefix": null,
            "owner_id": "633834615594",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0091078598950ff3c"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-external",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:633834615594:security-group/sg-09e342a4f474d5679",
            "description": "LB security groups",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow access to web",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-051e741edc74d411d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-09e342a4f474d5679",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow access from external",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_alb",
            "name_prefix": null,
            "owner_id": "633834615594",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0091078598950ff3c"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:633834615594:security-group/sg-051e741edc74d411d",
            "description": "Web security groups",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "allow http to app",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00e4213d4f3f5e39e"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-051e741edc74d411d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow http from lb",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09e342a4f474d5679"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_web",
            "name_prefix": null,
            "owner_id": "633834615594",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0091078598950ff3c"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "admin-in",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "For ssh access from bastion",
            "from_port": 22,
            "id": "sgrule-893377066",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-054b91882e0fa7cfa",
            "self": false,
            "source_security_group_id": "sg-087b3071c4177bcef",
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.admin",
            "aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "admin-manage",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "For admin management",
            "from_port": 22,
            "id": "sgrule-1000650482",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-087b3071c4177bcef",
            "self": false,
            "source_security_group_id": "sg-054b91882e0fa7cfa",
            "to_port": 22,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.admin",
            "aws_security_group.bastion",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "admin-out",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All traffic outbound",
            "from_port": 0,
            "id": "sgrule-193196570",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-054b91882e0fa7cfa",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.admin"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app-allow-web-access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow access from Web",
            "from_port": 8080,
            "id": "sgrule-3942194423",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00e4213d4f3f5e39e",
            "self": false,
            "source_security_group_id": "sg-051e741edc74d411d",
            "to_port": 8080,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_security_group.web",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "For allow ssh from outside",
            "from_port": 22,
            "id": "sgrule-3649104582",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-087b3071c4177bcef",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb-allow-http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow access from external",
            "from_port": 80,
            "id": "sgrule-1997250756",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09e342a4f474d5679",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.lb-external",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb-web-access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow access to web",
            "from_port": 80,
            "id": "sgrule-3695708829",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09e342a4f474d5679",
            "self": false,
            "source_security_group_id": "sg-051e741edc74d411d",
            "to_port": 80,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.lb-external",
            "aws_security_group.web",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web-access-to-app",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "allow http to app",
            "from_port": 8080,
            "id": "sgrule-1208104087",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-051e741edc74d411d",
            "self": false,
            "source_security_group_id": "sg-00e4213d4f3f5e39e",
            "to_port": 8080,
            "type": "egress"
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_security_group.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web-allow-lb-access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "allow http from lb",
            "from_port": 80,
            "id": "sgrule-13735785",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-051e741edc74d411d",
            "self": false,
            "source_security_group_id": "sg-09e342a4f474d5679",
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.lb-external",
            "aws_security_group.web",
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:633834615594:subnet/subnet-0c2eb1f77395190e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.10.0/24",
            "id": "subnet-0c2eb1f77395190e6",
            "map_public_ip_on_launch": true,
            "owner_id": "633834615594",
            "tags": {
              "CommonTags": "packer-demo-demo-20201231-080719",
              "Name": "private-subnet-01"
            },
            "vpc_id": "vpc-0091078598950ff3c"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:633834615594:subnet/subnet-0e546da7d947b2b98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.11.0/24",
            "id": "subnet-0e546da7d947b2b98",
            "map_public_ip_on_launch": true,
            "owner_id": "633834615594",
            "tags": {
              "CommonTags": "packer-demo-demo-20201231-080719",
              "Name": "private-subnet-02"
            },
            "vpc_id": "vpc-0091078598950ff3c"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:633834615594:subnet/subnet-09fee2aea64580594",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.1.12.0/24",
            "id": "subnet-09fee2aea64580594",
            "map_public_ip_on_launch": true,
            "owner_id": "633834615594",
            "tags": {
              "CommonTags": "packer-demo-demo-20201231-080719",
              "Name": "private-subnet-03"
            },
            "vpc_id": "vpc-0091078598950ff3c"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:633834615594:subnet/subnet-051990ea06cb55042",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-051990ea06cb55042",
            "map_public_ip_on_launch": true,
            "owner_id": "633834615594",
            "tags": {
              "CommonTags": "packer-demo-demo-20201231-080719",
              "Name": "public-subnet-01"
            },
            "vpc_id": "vpc-0091078598950ff3c"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:633834615594:subnet/subnet-0aaa155cf5d8c3561",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0aaa155cf5d8c3561",
            "map_public_ip_on_launch": true,
            "owner_id": "633834615594",
            "tags": {
              "CommonTags": "packer-demo-demo-20201231-080719",
              "Name": "public-subnet-02"
            },
            "vpc_id": "vpc-0091078598950ff3c"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:633834615594:subnet/subnet-0e9afe3a9c44f9eb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0e9afe3a9c44f9eb8",
            "map_public_ip_on_launch": true,
            "owner_id": "633834615594",
            "tags": {
              "CommonTags": "packer-demo-demo-20201231-080719",
              "Name": "public-subnet-03"
            },
            "vpc_id": "vpc-0091078598950ff3c"
          },
          "dependencies": [
            "aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:633834615594:vpc/vpc-0091078598950ff3c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a55de57329b23554",
            "default_route_table_id": "rtb-07057d62aab8d8071",
            "default_security_group_id": "sg-0e44e8f667cc59c59",
            "dhcp_options_id": "dopt-3bf2005e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0091078598950ff3c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07057d62aab8d8071",
            "owner_id": "633834615594",
            "tags": {
              "CommonTags": "packer-demo-demo-20201231-080719",
              "Name": "demo-vpc"
            }
          }
        }
      ]
    }
  ]
}